@@ -19,6 +19,10 @@ Summary of important user-visible changes for image 2.0.1:
     function has been deprecated.  If using a vector to specify the size of the
     neighborhood, the elements are no longer swapped.
 
+ ** For consistency with other functions that allow specification of padding
+    values, the function padarray now accepts the string "zeros" as a valid
+    option.
+
  ** The plot produced by `imhist' is correctly scaled on the X axis so that the
     colorbar corresponds to the actual intensity of the stems; the given
     colormarp is used on the colorbar for indexed images; and the stems no
